disabled DescribeClass warning for feature spec

--- a/config/ext/rspec.yml
+++ b/config/ext/rspec.yml
@@ -37,3 +37,7 @@ RSpec/MultipleExpectations:
 
 RSpec/MultipleMemoizedHelpers:
   Max: 10
+
+RSpec/DescribeClass:
+  Exclude:
+    - spec/features/*
