--- a/config/ext/rspec.yml
+++ b/config/ext/rspec.yml
@@ -41,3 +41,6 @@ RSpec/MultipleMemoizedHelpers:
 RSpec/DescribeClass:
   Exclude:
     - spec/features/**/*
+
+RSpec/FactoryBot/SyntaxMethods:
+  Enabled: false
