Updating some cops to explore alternatives to use them in our current implementation

--- a/config/ext/rspec.yml
+++ b/config/ext/rspec.yml
@@ -45,3 +45,7 @@ RSpec/MultipleMemoizedHelpers:
   Enabled: false
 RSpec/ExampleLength:
   Enabled: false
+RSpec/FilePath:
+  Enabled: false
+RSpec/DescribeMethod:
+  Enabled: false
