--- a/config/default.yml
+++ b/config/default.yml
@@ -8,6 +8,7 @@ Bundler/OrderedGems:
 
 Style/StringLiterals:
   Enabled: true
+  EnforcedStyle: double_quotes
 
 Style/Documentation:
   Enabled: false
